@@ -6,7 +6,7 @@ import com.msp.openmsp_kit.model.task.Task;
 import com.msp.openmsp_kit.service.database.DatabaseManager;
 import com.msp.openmsp_kit.service.file.FileManager;
 import com.msp.openmsp_kit.service.metrics.MetricsCollector;
-import com.msp.openmsp_kit.service.rateLimiter.RateLimiter;
+import com.msp.openmsp_kit.service.rateLimiter.impl.RateLimiterImpl;
 import com.msp.openmsp_kit.service.task.TaskExecutor;
 import com.msp.openmsp_kit.service.threadManager.ThreadManager;
 import org.springframework.stereotype.Service;
@@ -19,7 +19,7 @@ import java.util.concurrent.*;
 public class ThreadManagerImpl implements ThreadManager {
 
     private final TaskExecutor taskExecutor;
-    private final RateLimiter rateLimiter;
+    private final RateLimiterImpl rateLimiter;
     private final DatabaseManager databaseManager;
     private final FileManager fileManager;
     private final MetricsCollector metricsCollector;
@@ -32,15 +32,15 @@ public class ThreadManagerImpl implements ThreadManager {
     private final BlockingQueue<Result<?>> fileQueue;
 
     private final ExecutorService downloaderService;
-    private final ExecutorService databaseService;
-    private final ExecutorService fileService;
+
+    private final ExecutorService databaseExecutorService;
+    private final ExecutorService fileExecutorService;
+
     private final Object lock = new Object();
     private Status status;
-    private static final int numberOfThreads = Runtime.getRuntime().availableProcessors();
-
 
     ThreadManagerImpl(TaskExecutor taskExecutor,
-                      RateLimiter rateLimiter,
+                      RateLimiterImpl rateLimiter,
                       DatabaseManager databaseManager,
                       FileManager fileManager,
                       MetricsCollector metricsCollector) {
@@ -50,12 +50,12 @@ public class ThreadManagerImpl implements ThreadManager {
         this.rateLimiter = rateLimiter;
         this.metricsCollector = metricsCollector;
 
-        downloaderService = Executors.newFixedThreadPool((int) (numberOfThreads * 0.5));
-        databaseService = Executors.newFixedThreadPool((int) (numberOfThreads * 0.2));
-        fileService = Executors.newFixedThreadPool((int) (numberOfThreads * 0.3));
+        databaseExecutorService = Executors.newVirtualThreadPerTaskExecutor();
+        fileExecutorService = Executors.newVirtualThreadPerTaskExecutor();
+        downloaderService = Executors.newFixedThreadPool(2);
 
-        databaseQueue = new LinkedBlockingQueue<>(200);
-        fileQueue = new LinkedBlockingQueue<>(500);
+        databaseQueue = new LinkedBlockingQueue<>(1000);
+        fileQueue = new LinkedBlockingQueue<>(5000);
         this.databaseManager = databaseManager;
         this.fileManager = fileManager;
     }
@@ -105,16 +105,15 @@ public class ThreadManagerImpl implements ThreadManager {
 
     @Override
     public void runThreads() {
-        CompletableFuture.runAsync(this::runDatabaseThread, databaseService);
-        CompletableFuture.runAsync(this::runFileThread, fileService);
-
+        CompletableFuture.runAsync(this::runDatabaseThread);
+        CompletableFuture.runAsync(this::runFileThread);
     }
 
     @Override
     public void stopThreads() {
-        databaseService.shutdown();
+        databaseExecutorService.shutdown();
+        fileExecutorService.shutdown();
         downloaderService.shutdown();
-        fileService.shutdown();
     }
 
     @Override
@@ -123,7 +122,9 @@ public class ThreadManagerImpl implements ThreadManager {
             System.out.println("ThreadManager is not running");
             return;
         }
+        int i = 0;
         for (List<Task> batch : batches) {
+            System.out.println("BATCH " + i++ + " of " + batches.size());
             processBatch(batch);
         }
     }
@@ -137,7 +138,6 @@ public class ThreadManagerImpl implements ThreadManager {
                 .map(task -> {
                     return CompletableFuture.supplyAsync(() -> {
                         rateLimiter.acquire();
-
                         var result = taskExecutor.process(task);
                         metricsCollector.incrementProcessedTasks();
                         return result;
@@ -164,7 +164,9 @@ public class ThreadManagerImpl implements ThreadManager {
         for (Result<?> result : results) {
             try {
                 databaseQueue.put(result);
+                metricsCollector.setdataBaseQueueSize(databaseQueue.size());
                 if (hasImageToDownload(result)) {
+                    metricsCollector.setfileQueueSize(fileQueue.size());
                     fileQueue.put(result);
                 }
             } catch (InterruptedException e) {
@@ -177,8 +179,11 @@ public class ThreadManagerImpl implements ThreadManager {
     public void runDatabaseThread() {
         while (isRunning() || !databaseQueue.isEmpty()) {
             try {
-                databaseManager.saveEntity(databaseQueue.take());
-                metricsCollector.incrementTotalDatabaseSaves();
+                Result<?> takenResult = databaseQueue.take();
+                databaseExecutorService.submit(() -> {
+                    databaseManager.saveEntity(takenResult);
+                    metricsCollector.incrementTotalDatabaseSaves();
+                });
             } catch (InterruptedException e) {
                 metricsCollector.incrementTotalDatabaseFailed();
                 throw new RuntimeException(e);
@@ -190,8 +195,11 @@ public class ThreadManagerImpl implements ThreadManager {
     public void runFileThread() {
         while (isRunning() || !fileQueue.isEmpty()) {
             try {
-                fileManager.downloadFile(fileQueue.take());
-                metricsCollector.incrementTotalFileSaves();
+                Result<?> takenResult = fileQueue.take();
+                fileExecutorService.submit(() -> {
+                    fileManager.downloadFile(takenResult);
+                    metricsCollector.incrementTotalFileSaves();
+                });
             } catch (InterruptedException e) {
                 metricsCollector.incrementTotalFileFailed();
                 throw new RuntimeException(e);
